Update Task #2 - Prediction using Unsupervised ML.ipynb

--- a/Task #2 - Prediction using Unsupervised ML.ipynb
+++ b/Task #2 - Prediction using Unsupervised ML.ipynb
@@ -7,7 +7,7 @@
     "id": "UID9RK1qDlVB"
    },
    "source": [
-    "# **Viroang Rawat**\n",
+    "# **Prasham Pahadiya**\n",
     "\n"
    ]
   },
