--- a/Task #4 - Stock Market Prediction using Numerical and Textual Analysis.ipynb
+++ b/Task #4 - Stock Market Prediction using Numerical and Textual Analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Viroang Rawat**\n"
+    "# **Prasham Pahadiya**\n"
    ]
   },
   {
